# aleator

./: .env.dev  .env.dev.example  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  Makefile  README.md  deploy.sh  design_poc.tsx  docker-compose.dev.yml  docker-compose.yml  nginx-setup.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  test.yml
backend/: .env.test  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Dockerfile.dev  cleanup_guest_accounts.py  main.py  populate_test_data.py  pyproject.toml  ruff.toml  test_auth_e2e.py  test_decimal_probability.py
backend/app/: __init__.py  auth.py  db.py  models.py  schemas.py  services.py  settings.py
backend/app/api/v1/: auth.py  decisions.py  stats.py  user.py
backend/tests/: conftest.py  test_auth.py  test_decision_logic.py  test_decisions.py  test_models.py  test_stats.py
frontend/: Dockerfile  bun.lockb  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AboutButton.tsx  AccountDropdown.tsx  CreateDecisionDialog.tsx  DecisionCard.tsx  EditDecisionDialog.tsx  ErrorBoundary.tsx  ProtectedRoute.tsx
frontend/src/components/ui/: dropdown-menu.tsx
frontend/src/contexts/: AuthContext.tsx  PreferencesContext.tsx  ThemeContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/types/: index.ts
