[project]
name = "aleator"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Maximilian Wolf", email="max@mwolf.dev"},
]

license = "MIT"
#classifiers = []

dependencies = [
  "fastapi[standard]~=0.115.12",
  "sqlmodel~=0.0.24",
  "alembic~=1.15.2",
  "asyncpg~=0.30.0",
  "pydantic-settings~=2.9.1",
  "orjson~=3.10.16",
]

[project.optional-dependencies]

test = [
  "pytest~=8.3.5",
]

[project.urls]
Homepage = "https://www.aleatoric.agency"
Repository = "https://github.com/MaxWolf-01/aleator"
Issues = "https://github.com/MaxWolf-01/aleator/issues"
#Changelog = ""

