[project]
name = "aleator"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Maximilian Wolf", email="max@mwolf.dev"},
]

license = "MIT"
#classifiers = []

dependencies = [
  "fastapi[standard]~=0.115.12",
  "sqlmodel~=0.0.24",
  "alembic~=1.15.2",
  "asyncpg~=0.30.0",
  "pydantic-settings~=2.9.1",
  "orjson~=3.10.16",
  "pyjwt~=2.8.0",
  "bcrypt~=4.1.2",
  "python-multipart~=0.0.18",
]

[project.optional-dependencies]

test = [
  "pytest~=8.3.5",
  "httpx~=0.28.1",
  "pytest-asyncio~=0.25.0",
  "aiosqlite~=0.20.0",
  "ruff~=0.8.6",
]

[project.urls]
Homepage = "https://www.aleatoric.agency"
Repository = "https://github.com/MaxWolf-01/aleator"
Issues = "https://github.com/MaxWolf-01/aleator/issues"
#Changelog = ""

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

